src/coolcmp/unit_tests/Semantics/success/classtwofields.cl
class Hello {
   foo: Int;
   bar: String;
};

class Main {
	main() : Int {
		1
	};
};