src/coolcmp/unit_tests/Semantics/fail/example_coolmanual_pag9.cl
class P {
	f(): Int { 1 };
};

class C inherits P {
	f(): String { "1" };
};

class Main {
	main() : Int {
		1
	};
};